# mimi-vibe-backend

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Makefile
.claude/: active_contexts
.github/instructions/: coding-style.instructions.md  fcs.instructions.md  impl.instructions.md  plan.instructions.md  pr.instructions.md  response-style.instructions.md
.github/workflows/: ci.yml
docs/: LLM_INTEGRATION.md  REBUILD_CHECKLIST.md  REBUILD_CODE_TEMPLATES.md  REBUILD_EXECUTIVE_SUMMARY.md  REBUILD_INDEX.md  REBUILD_QUICK_REFERENCE.md  REBUILD_STRATEGY.md  REBUILD_VISUAL_SUMMARY.md  TASK-ISSUE-TEMP.md
examples/: arc_counter.rs
migrations/: .gitkeep
src/: lib.rs  main.rs
src/db/: mod.rs  queries.rs  schema.rs
src/handlers/: ask.rs  mod.rs  payments.rs  readings.rs  referrals.rs  users.rs
src/llm/: mod.rs
src/middleware/: auth.rs  error_handler.rs  mod.rs  rate_limit.rs
src/models/: api.rs  mod.rs  payment.rs  reading.rs  user.rs
src/services/: ai_engine.rs  mod.rs  payment_service.rs  queue_service.rs
src/services/llm/: mod.rs  openai.rs
test/scripts/: smoke.sh
tests/: health_integration.rs  llm_integration.rs
