[package]
name = "mimi-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
actix-web = "4.8"
actix-cors = "0.7"
actix-rt = "2.10"

# Async runtime
tokio = { version = "1.38", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-native-tls", "migrate"] }

# Redis/Queue
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Environment variables
dotenv = "0.15"

# Authentication/JWT
jsonwebtoken = "9.3"
bcrypt = "0.15"

# HTTP client (for LINE OAuth, OpenAI API)
reqwest = { version = "0.12", features = ["json"] }

# Stripe SDK
async-stripe = { version = "0.41.0", features = ["runtime-tokio-hyper"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
env_logger = "0.11"
log = "0.4"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.8", features = ["v4", "serde"] }